fix aligning issue

--- a/components/about/styles.module.scss
+++ b/components/about/styles.module.scss
@@ -5,6 +5,7 @@
     font-size: 4.3rem;
     margin-bottom: 1.5rem;
     color: #ff6f59;
+    text-align: center;
   }
   p {
     font-size: 1.7rem;
